--- a/src/sass/nav.scss
+++ b/src/sass/nav.scss
@@ -10,7 +10,7 @@ nav {
     .logo {
       height: 40px;
       width: 180px;
-      background-image: url("images/Keurig_logo.svg.png");
+      background-image: url("../images/Keurig_logo.svg.png");
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
